# sfa

./: .gitignore  Cargo.toml  FUZZ.sh  MUTANT.sh  README.md
.github/workflows/: test.yml
fuzz/sfa/: Cargo.toml
fuzz/sfa/src/: main.rs
fuzz/tft/: Cargo.toml
fuzz/tft/src/: main.rs
src/: checksum.rs  checksum_writer.rs  error.rs  lib.rs  reader.rs  writer.rs
src/toc/: entry.rs  mod.rs  reader.rs  writer.rs
src/trailer/: reader.rs  writer.rs
test_fixture/: cherry_pie_broken  cherry_pie_broken.tft
tests/: empty_section.rs  full_file_checksum.rs  simple.rs  toc_checksum.rs
